# mapwright

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/gallery/atlas_pack/: README.md  manifest.json
examples/: benchmark.py  gallery.py
src/mapwright/: __init__.py  _geometry.py  _graph.py  _serde.py  affordances.py  atlas_renderer.py  config.py  dungeon.py  dungeon_renderer.py  names.py  regions.py  rng.py  roads.py  settlement.py  settlement_renderer.py  svg_renderer.py  terrain.py  themes.py
tests/: test_affordances.py  test_api_contract.py  test_atlas_renderer.py  test_config.py  test_dungeon.py  test_dungeon_renderer.py  test_geometry.py  test_graph.py  test_names.py  test_properties.py  test_regions.py  test_rng.py  test_roads.py  test_serialize.py  test_settlement.py  test_svg_renderer.py  test_terrain.py  test_themes.py
