[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapwright"
version = "0.14.0"
description = "Domain-neutral procedural fantasy map & world generation: Voronoi terrain, hydraulic erosion, biomes, rivers, Markov place-names, and shaded-relief SVG."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anthony Sligar" }]
keywords = [
    "procedural-generation",
    "fantasy-map",
    "worldgen",
    "voronoi",
    "terrain",
    "erosion",
    "biomes",
    "ttrpg",
    "svg",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "hypothesis>=6"]

[project.urls]
Homepage = "https://github.com/sligara7/mapwright"
Repository = "https://github.com/sligara7/mapwright"

[tool.hatch.build.targets.wheel]
packages = ["src/mapwright"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
